--- a/ws_static/css/wljc.css
+++ b/ws_static/css/wljc.css
@@ -24,6 +24,7 @@ ul,li{
   white-space:nowrap;
 }
 .wljc-box {
+  position: relative;
   padding: 50px;
   width: 100%;
   height: auto;
@@ -106,7 +107,10 @@ ul,li{
   width: 20%;
 }
 .dec-list .item-main .item p{
-  width: 33.333%;
+  width: 40%;
+}
+.dec-list .item-main .item p:last-child{
+  width: 20%;
 }
 .dec-list{}
 .dec-list .item-main{
@@ -114,13 +118,25 @@ ul,li{
 
 .wljc-list{
   /*padding: 38px 30px;*/
-  border-left: 6px solid #446d86;
 }
 .wljc-list .ul-box:not(.first){
-  margin-top: 24px;
+  /*margin-top: 24px;*/
 }
 .wljc-list .ul-box{
   position: relative;
+  border-left: 6px solid #446d86;
+}
+.wljc-list .ul-box .ul-bg{
+  padding: 0 0 0 40px;
+}
+.wljc-list .ul-box.active .ul-bg{
+  margin-left: 4%;
+  padding: 10px 30px;
+  width: 96%;
+  background: rgba(0,0,0,0.2);
+}
+.wljc-list .ul-box.active .item-handle{
+  padding: 0!important;
 }
 .wljc-list .ul-box ul{
   display: none;
@@ -131,10 +147,9 @@ ul,li{
 .wljc-list .ul-box .main{
   display: flex;
   align-items: center;
-  height: 40px;
-  padding: 0 80px;
+  height: 60px;
+  padding: 0 50px;
 
-  line-height: 24px;
   font-size: 24px;
   color: darkgoldenrod;
 }
@@ -147,10 +162,13 @@ ul,li{
 .wljc-list .ul-box.active{
   position: relative;
 }
+.wljc-list .ul-box:last-of-type.active{
+  border-left: none;
+}
+
 .wljc-list .ul-box.active ul{
-  width: 95%;
-  margin-left: 5%;
-  background: rgba(255,255,255,.5);
+  /*width: 95%;*/
+  /*margin-left: 5%;*/
 }
 .wljc-list .ul-box.active:before{
   color: #d0dee7!important;
@@ -162,9 +180,9 @@ ul,li{
 .wljc-list .ul-box:before{
   content: '1';
   position: absolute;
-  right: 97.4%;
+  right: 97.9%;
   left: auto;
-  top: 2px;
+  top: 14px;
 
   width: 50px;
   height: 50px;
@@ -201,7 +219,7 @@ ul,li{
   content: '8';
 }
 .item-handle{
-  padding: 20px 24px 20px 46px;
+  padding: 20px 0;
   justify-content: space-between;
 }
 .item-handle.bg{
@@ -258,8 +276,12 @@ ul,li{
 
 /* fenye */
 .paging{
+  /*position: absolute;*/
+  /*bottom: 30px;*/
+  /*right: 50px;*/
   display: flex;
   justify-content: flex-end;
+  margin-top: 30px;
 }
 .paging .arrow{
   width: 194px;
@@ -270,6 +292,7 @@ ul,li{
   margin-right: 16px;
 }
 .paging-arrow-up.disable{
+  pointer-events: none;
   background: url("../../webpage/jbhm/images/arrow-up-disable.png");
   background-size: cover;
 }
@@ -278,6 +301,7 @@ ul,li{
   background-size: cover;
 }
 .paging-arrow-down.disable{
+  pointer-events: none;
   background: url("../../webpage/jbhm/images/arrow-down-disable.png");
   background-size: cover;
 }
