--- a/ws_static/css/wljc.css
+++ b/ws_static/css/wljc.css
@@ -188,6 +188,7 @@ ul,li{
   color: #ffe011;
 }
 .wljc-list .ul-box .main .dec-arrow{
+  margin-right: 10px;
   font-size: 20px;
   color: #08f957;
 }
